[package]
name = "fuzzer"
version = "0.0.1"
edition = "2021"
authors = ["Eveheeero <xhve00000@gmail.com>"]
repository = "https://github.com/Eveheeero/fuzzer"
license = "MIT"
description = "Simple Custom fuzzer"

[dependencies]
rand = "0.8.5"
json = "0.12.4"

[dependencies.clap]
version = "4.0.17"
features = ["derive"]
