[package]
name = "fuzzer"
version = "0.0.2"
edition = "2021"
authors = ["Eveheeero <xhve00000@gmail.com>"]
repository = "https://github.com/Eveheeero/debugger"
license = "MIT"
description = "Simple Custom Fuzzer"

[dependencies]
rand = "0.8.5"
json = "0.12.4"

[dependencies.clap]
version = "4.0.17"
features = ["derive"]
